cmake_minimum_required(VERSION 3.21)
project(learn)

set(CMAKE_CXX_STANDARD 17)

add_executable(learn
        helloword.cpp function.cpp function.h myStruct.cpp myStruct.h Circle.cpp Circle.h Student.h Pointer.h People.h Person.h Phone.h Building.h A.h base.h ploymorphers.h Calc.h computer.h testio.h)
